--- a/static/style.css
+++ b/static/style.css
@@ -68,7 +68,7 @@ article{
 article .head{
     background: #555;
     color: white;
-    padding: 10px;
+    padding: 10px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
